app/be/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: gateway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hsm-be-core-gateway
                port:
                  number: 41000
